--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,6 +12,15 @@ services:
     image: komunitin/komunitin-notifications:latest
     ports:
       - "2028:2028"
+    environment:
+      - KOMUNITIN_ACCOUNTING_URL=https://integralces.net/ces/api/accounting
+      - KOMUNITIN_SOCIAL_URL=https://integralces.net/ces/api/social
+      - KOMUNITIN_AUTH_URL=https://integralces.net/oauth2
+      - KOMUNITIN_APP_URL=https://komunitin.org
+      - NOTIFICATIONS_CLIENT_ID=notifications.komunitin.org
+      - NOTIFICATIONS_CLIENT_SECRET=${NOTIFICATIONS_CLIENT_SECRET}
+    volumes:
+      - "./komunitin-project-firebase-adminsdk.json:/opt/notifications/komunitin-project-firebase-adminsdk.json"
 
   redis:
     image: redis:7
