--- a/ices/Dockerfile.drupal
+++ b/ices/Dockerfile.drupal
@@ -11,7 +11,8 @@ RUN docker-php-ext-configure gd \
 		--with-freetype \
 		--with-jpeg=/usr \
 		--with-webp
-RUN docker-php-ext-install -j$(nproc) gd opcache pdo_mysql zip
+RUN docker-php-ext-install -j$(nproc) gd opcache mysqli pdo_mysql zip \
+  && docker-php-ext-enable mysqli
 RUN docker-php-ext-configure imap --with-kerberos --with-imap-ssl && \
     docker-php-ext-install -j$(nproc) imap
 
