--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,8 @@ services:
       - NOTIFICATIONS_CLIENT_SECRET=${NOTIFICATIONS_CLIENT_SECRET}
       - NOTIFICATIONS_EVENTS_USERNAME=integralces
       - NOTIFICATIONS_EVENTS_PASSWORD=${NOTIFICATIONS_CLIENT_SECRET}
+      - MAILERSEND_API_KEY=${MAILERSEND_API_KEY}
+      - SEND_MAILS=true
     volumes:
       - "./komunitin-project-firebase-adminsdk.json:/opt/notifications/komunitin-project-firebase-adminsdk.json"
 
