New prod deployment

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,25 @@
-# Password for admin user & database of demo.integralces.net 
-ICES_DEMO_PASSWORD="XXXXX"
-# ICES api OAuth2 client secret for the notifications client and password 
-# for the events api authentication from ICES to notifications service.
-NOTIFICATIONS_CLIENT_SECRET="XXXXX"
-# MailerSend API Key to send platform emails.
-MAILERSEND_API_KEY="XXXXX"
+# App variables
+KOMUNITIN_DOMAIN=komunitin.org
+ICES_URL=https://integralces.net
+KOMUNITIN_ACCOUNTING_URL=https://accounting.komunitin.org
+KOMUNITIN_NOTIFICATIONS_URL=https://notifications.komunitin.org
+PUSH_SERVER_KEY=
+GTAG_ID=
+
+# Notifications variables
+KOMUNITIN_APP_URL=https://komunitin.org
+KOMUNITIN_NOTIFICATIONS_SECRET=
+MAILERSEND_API_KEY=
+
+# Accounting variables
+ACCOUNTING_POSTGRES_PASSWORD=
+ACCOUNTING_POSTGRES_APP_PASSWORD=
+KOMUNITIN_ACCOUNTING_MASTER_PASSWORD=
+STELLAR_NETWORK=mainnet
+STELLAR_HORIZON_URL=https://horizon.stellar.org
+KOMUNITIN_ACCOUNTING_MASTER_PASSWORD_SALT=
+KOMUNITIN_ACCOUNTING_SPONSOR_PRIVATE_KEY=
+
+# IntegralCES variables
+ICES_MYSQL_PASSWORD=
+GOOGLE_MAPS_KEY=
