--- a/proxy/compose.yml
+++ b/proxy/compose.yml
@@ -1,5 +1,3 @@
-version: "3.5"
-
 services:
   traefik:
     image: "traefik:2.10"
@@ -22,11 +20,24 @@ services:
       - "letsencrypt:/letsencrypt"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
-      - komunitin
+      komunitin.org:
+        aliases:
+          - komunitin.org
+          - accounting.komunitin.org
+          - notifications.komunitin.org
+          - integralces.net
+      demo.komunitin.org:
+        aliases:
+          - demo.komunitin.org
+          - accounting.demo.komunitin.org
+          - notifications.demo.komunitin.org
+          - integralces.demo.komunitin.org
 
 volumes:
   letsencrypt:
 
 networks:
-  komunitin:
-    name: komunitin
+  komunitin.org:
+    name: komunitin.org
+  demo.komunitin.org:
+    name: demo.komunitin.org
