--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
       - name: Deploy komunitin.org
         run: >
           ssh deploy@komunitin.org
-          "cd /opt/komunitin-deploy
+          "cd /opt/komunitin.org
           && sh deploy.sh
           "
