--- a/compose.yml
+++ b/compose.yml
@@ -97,7 +97,7 @@ services:
       MASTER_PASSWORD_SALT: ${KOMUNITIN_ACCOUNTING_MASTER_PASSWORD_SALT}
       AUTH_JWKS_URL: http://integralces/.well-known/jwks.json
       AUTH_JWT_ISSUER: ${ICES_URL}/
-      AUTH_JWT_AUDIENCE: "komunitin-app,komunitin-notifications"
+      AUTH_JWT_AUDIENCE: "komunitin-app,notifications.komunitin.org"
       NOTIFICATIONS_API_URL: http://notifications:2028
       API_BASE_URL: ${KOMUNITIN_ACCOUNTING_URL}
       NOTIFICATIONS_API_USERNAME: komunitin
