Use custom image for accounting DB

--- a/.env.template
+++ b/.env.template
@@ -19,7 +19,9 @@ STELLAR_NETWORK=mainnet
 STELLAR_HORIZON_URL=https://horizon.stellar.org
 KOMUNITIN_ACCOUNTING_MASTER_PASSWORD_SALT=
 KOMUNITIN_ACCOUNTING_SPONSOR_PRIVATE_KEY=
+GOOGLE_CLOUD_STORAGE_BUCKET=gs://komunitin-backup
 
 # IntegralCES variables
 ICES_MYSQL_PASSWORD=
 GOOGLE_MAPS_KEY=
+
