Add TypeScript notifications service and update deployment script for DB migrations

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,14 @@ KOMUNITIN_APP_URL=https://komunitin.org
 KOMUNITIN_NOTIFICATIONS_SECRET=
 MAILERSEND_API_KEY=
 
+# Notifications TypeScript variables
+NOTIFICATIONS_TS_POSTGRES_PASSWORD=
+NOTIFICATIONS_TS_POSTGRES_APP_PASSWORD=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASS=
+
 # Accounting variables
 ACCOUNTING_POSTGRES_PASSWORD=
 ACCOUNTING_POSTGRES_APP_PASSWORD=
